--- a/client/src/style.css
+++ b/client/src/style.css
@@ -58,8 +58,10 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+    box-shadow:0 0;
+    outline:0
 }
+
 
 .card {
   padding: 2em;
